:art: Add an exception to catch merge error